<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="fab">FAB</string>
    <string name="information">Information</string>

    <!-- Board and winner Choices -->
    <string name="x">X</string>
    <string name="o">O</string>
    <string name="no_winner">No Winner</string>
    <string name="undo">Undo</string>

    <!-- Error Messages -->
    <string name="error_space_already_taken">That space is already taken.</string>
    <string name="error_cannot_undo_this_move">Cannot undo now.</string>

    <!-- Info Messages -->
    <string name="game_rules">"
        Tic Tac Toe is simple to play!\n
        Players alternate clicking on an available space until the game is over.\n
        The winner is the first player to get three in a row, column or diagonal.\n
        Otherwise, if no player has won and no available spaces remain, then that's a tie game.\n
        You can play against the computer or a fellow human."</string>
    <string name="banner_text">Please tap on a square</string>
    <string name="info_first_turn_of_the_game">First turn of the game.</string>
    <string name="info_board_full">Board full; neither player has won.</string>
    <string name="info_computer_goes_next">Computer will wait for its next available turn.</string>
    <string name="info_defaultValue_lastTurnResults">Initial Turn:</string>
    <string name="info_first_game_of_session">This is the first game of the session.</string>
    <string name="info_game_already_over">The game has already ended.</string>
    <string name="info_game_over">Game Over!</string>
    <string name="info_game_restored">Auto-Saved Game State Restored</string>
    <string name="info_has_won"> has won!</string>

    <!-- ActionBar Items -->
    <string name="action_autoSaveGame">Auto-Save Game</string>
    <string name="action_computerOpponent">Computer Opponent</string>
    <string name="action_computerStarts">Computer Goes First</string>
    <string name="action_newGame">New Game</string>
    <string name="about">About</string>

    <!-- About Dialog Items -->>
    <string name="aboutDialogTitle">About Tic Tac Toe</string>
    <string name="aboutDialog_banner"><![CDATA[© 2015–2023 Samuel A.\nEmail: mintedtech@gmail.com\n\nThanks to Touro University\'s MCON 451/521 students for their in-class thoughts and ideas.]]></string>
    <string name="OK">OK</string>

    <!-- Status Bar Items -->
    <string name="status_bar_text">Current player: X</string>
    <string name="current_turn">"Current Player: "</string>
    <string name="chose">" chose: "</string>
    <string name="row_colon">"Row "</string>
    <string name="column_colon">"Column "</string>

    <!-- Alternate Descriptions for ImageView images -->
    <string name="current_turn_X">Current turn: X</string>
    <string name="current_turn_O">Current turn: O</string>
    <string name="board_space">Board Space</string>

    <!-- Strings used for Statistics Activity -->
    <string name="games_played"><![CDATA[Games played: ]]></string>
    <string name="player_number">Player\nNumber</string>
    <string name="games_won">Games\nWon</string>
    <string name="percent_won">Percent\nWon</string>
    <string name="view_statistics">View Statistics</string>
    <string name="reset_statistics">Reset Statistics</string>

    <!-- Preference Key -->
    <string name="key_use_auto_save">USE_AUTO_SAVE</string>
    <string name="title_use_auto_save">Use Auto-Save</string>
    <string name="key_computer_opponent">COMPUTER_OPPONENT</string>
    <string name="title_computer_opponent">Computer Opponent</string>
    <string name="key_computer_starts">COMPUTER_STARTS</string>
    <string name="title_computer_starts">Computer Starts</string>
</resources>
